crates/vise/tests/ui/labels/unsupported_generics_for_set.stderr
error: Generics are not supported for `derive(EncodeLabelSet)` macro
 --> tests/ui/labels/unsupported_generics_for_set.rs:4:27
  |
4 | struct UnsupportedLifetime<'a> {
  |                           ^^^^

error: Generics are not supported for `derive(EncodeLabelSet)` macro
 --> tests/ui/labels/unsupported_generics_for_set.rs:9:29
  |
9 | struct UnsupportedConstParam<const N: usize> {
  |                             ^^^^^^^^^^^^^^^^

error: Generics are not supported for `derive(EncodeLabelSet)` macro
  --> tests/ui/labels/unsupported_generics_for_set.rs:14:28
   |
14 | struct UnsupportedTypeParam<T> {
   |                            ^^^
